--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
 	"version": "0.0.1",
 	"description": "API project for freeCodeCamp",
 	"main": "server.js",
+	"author": "Piotr Mularski",
 	"scripts": {
-		"start": "node server.js"
+		"start": "nodemon server.js"
 	},
 	"dependencies": {
+		"cors": "^2.8.1",
 		"express": "^5.0.0-alpha.2",
-		"cors": "^2.8.1"
-	},
-	"engines": {
-		"node": "4.4.5"
+		"nodemon": "^1.18.10",
+		"request-ip": "^2.1.3"
 	},
 	"repository": {
 		"type": "git",
