--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://hyperdev.com/#!/project/welcome-project"
+		"url": "https://github.com/Piotr-Mularski/fcc-request-header-parser-microservice.git"
 	},
 	"keywords": [
 		"node",
